objects/LLC_BI__Dimension__c.object
<CustomObject>
    <description>This object stores the dimensions used in a particular matrix. Dimensions use information in the Dimension Definition object to pull data from fields and objects in the nCino BOS.</description>
    <fields>
        <fullName>LLC_BI__Dimension_Definition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Administrators populate this required lookup field to associate this dimension to a dimension definition. By default, the value is blank.</description>
        <inlineHelpText>Select the associated dimension definition.</inlineHelpText>
        <label>Dimension Definition</label>
        <referenceTo>LLC_BI__Dimension_Definition__c</referenceTo>
        <relationshipLabel>Dimensions</relationshipLabel>
        <relationshipName>Dimensions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Matrix__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Administrators populate this required lookup field to associate this dimension to a matrix. By default, the value is blank.</description>
        <inlineHelpText>Select the associated matrix.</inlineHelpText>
        <label>Matrix</label>
        <referenceTo>LLC_BI__Matrix__c</referenceTo>
        <relationshipLabel>Dimensions</relationshipLabel>
        <relationshipName>Dimensions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Order__c</fullName>
        <description>The system automatically populates this required numeric field to indicate the order of the columns. By default, the value is blank.</description>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Dimension</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Dimension Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dimensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>